// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layers reducer Should be able to add a layer 1`] = `
Object {
  "UUID_OVERPASS": Object {
    "description": "description",
    "id": "UUID_OVERPASS",
    "leafletLayer": "leafletLayer",
    "name": "name",
    "sources": Object {},
    "visible": true,
  },
}
`;

exports[`Layers reducer Should be able to add a layer 2`] = `
Object {
  "UUID_OSMOSE": Object {
    "description": "description",
    "id": "UUID_OSMOSE",
    "leafletLayer": "leafletLayer",
    "name": "name",
    "sources": Object {},
    "visible": true,
  },
  "UUID_OVERPASS": Object {
    "description": "description",
    "id": "UUID_OVERPASS",
    "leafletLayer": "leafletLayer",
    "name": "name",
    "sources": Object {},
    "visible": true,
  },
}
`;

exports[`Layers reducer Should be able to add a source to a layer 1`] = `
Object {
  "UUID_OVERPASS": Object {
    "description": "description",
    "id": "UUID_OVERPASS",
    "leafletLayer": "leafletLayer",
    "name": "name",
    "sources": Object {
      "id": Object {
        "content": "content",
        "contentDisplay": "CONTENT_DISPLAY_SIDEBAR",
        "description": "description",
        "id": "id",
        "leafletLayer": "leafletLayer",
        "name": "name",
        "points": Array [],
        "type": "OVERPASS_SOURCE",
        "visible": true,
      },
    },
    "visible": true,
  },
}
`;

exports[`Layers reducer Should be able to remove a layer 1`] = `
Object {
  "UUID_OSMOSE": Object {
    "description": "description",
    "id": "UUID_OSMOSE",
    "leafletLayer": "leafletLayer",
    "name": "name",
    "sources": Object {},
    "visible": true,
  },
}
`;
